# python-fastapi-template

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  Dockerfile  GEMINI.md  QUICK_TEST_GUIDE.md  README.md  TESTING.md  TEST_IMPLEMENTATION.md  TEST_SUMMARY.md  TEST_TROUBLESHOOTING.md  alembic.ini  check_environment.py  docker-compose.yml  example_minio_usage.py  example_usage.py  gunicorn.conf.py  init_db.py  pyproject.toml  pytest.ini  run_tests.ps1  schema_demo.py  test.db  test_jwt.py  test_ticket_api.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 36a2d111a916_add_minio_fields_to_ticket_attachments.py  65d4f435aaa7_initial_migration_create_ticket_schema_.py  68d74054af42_001_init.py  7fd12a703507_update_models.py  865d38f4b310_002_update_models.py  9ce75d6154a8_init.py  bf26b7859ae8_modify_category_name_unique_constraint.py  e15c3864e8a4_003_allow_null_values_for_attachments.py
app/: config.py  database.py  dependencies.py  main.py
app/auth/: dependencies.py
app/core/: alerting.py  logging.py  structlog_config.py
app/handlers/: __init__.py  error_handlers.py
app/middleware/: access_log_middleware.py  logging_middleware.py
app/models/: __init__.py  approval_process.py  approval_process_step.py  approval_process_step_approver.py  approval_template.py  approval_template_step.py  approval_template_step_approver.py  attachment.py  base.py  category.py  comment.py  enums.py  item.py  label.py  notification_rule.py  ticket.py  ticket_attachment.py  ticket_note.py  ticket_note_attachment.py  ticket_template.py  ticket_view_permission.py  user.py
app/repositories/: approval_repository.py  attachment_repository.py  base.py  base_repository.py  category_repository.py  comment_repository.py  label_repository.py  note_repository.py  notification_rule_repository.py  ticket_repository.py  user_repository.py
app/routers/: __init__.py  approval_router.py  attachment_router.py  category_router.py  items.py  label_router.py  public_router.py  test_router.py  ticket_router.py  user_endpoint.py
app/schemas/: __init__.py  approval.py  attachment.py  category.py  comment.py  item.py  label.py  note.py  notification.py  pagination.py  permission.py  response.py  ticket.py  user.py
app/services/: __init__.py  approval_service.py  attachment_service.py  category_service.py  label_service.py  minio_service.py  note_service.py  notification_service.py  ticket_service.py  user_service.py
app/utils/: __init__.py  email_utils.py  kafka_producer.py  mattermost_client.py  smtp_client.py
docs/: MINIO_SETUP.md  SPEC.md  ticket_system_schema.sql
docs/plans/: ticket_development_plan.md
docs/tasks/: 001-Setup-Project-Structure.md  002-Implement-SQLAlchemy-Models.md  003-Setup-Alembic-Migrations.md  (+21 more)
tests/: conftest.py  test_category_repository.py  test_category_service.py  test_main.py
(+19 files in other folders)
